Started work officially on the SingleNoteView

--- a/feature/home/presentation/src/main/res/values/strings.xml
+++ b/feature/home/presentation/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="add_note_error">Can not add to notes</string>
     <string name="add_favourite_success">Successfully added!</string>
     <string name="create_your_first_note">Create your first note!</string>
+    <string name="no_note_found">No results found</string>
 </resources>
