--- a/feature/single_note/presentation/src/main/res/values/strings.xml
+++ b/feature/single_note/presentation/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="get_note_error">Unable to retrieve note</string>
     <string name="update_note_error">Unable to update note</string>
+    <string name="create_note_error">Unable to create note</string>
 </resources>
