--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Notes</string>
+    <string name="facebook_app_id">314491804509009</string>
+    <string name="fb_login_protocol_scheme">fb314491804509009</string>
+    <string name="facebook_client_token">e179c71c1a2d1cbde60a0644e1a81ae2</string>
 </resources>
