--- a/feature/home/presentation/src/main/res/values/strings.xml
+++ b/feature/home/presentation/src/main/res/values/strings.xml
@@ -20,9 +20,18 @@
     <string name="unpin_note_error">Unable to unpin Notes</string>
     <string name="note_unpinned">Notes unpinned Successfully</string>
     <string name="unpin">Unpin</string>
-    <string name="web_client_id">229706785154-n082ooj29guaj0k4qsqgussibti94atp.apps.googleusercontent.com</string>
     <string name="load_user_data_error">Unable to confirm Login</string>
     <string name="sync_notes">Sync Notes Online</string>
     <string name="sign_out">Sign out</string>
     <string name="profile_picture">Profile Picture</string>
+    <string name="passwords_dont_match">Passwords don\'t match</string>
+    <string name="passwords_not_strong">Password not strong enough</string>
+    <string name="passwords_too_short">Password too short</string>
+    <string name="sign_in_success">Successfully Signed In</string>
+    <string name="sign_up_success">You have successfully created an account</string>
+    <string name="sign_out_success">Successfully signed out</string>
+    <string name="sign_in_error">Unable to sign in Please make sure your username and password is typed in correctly</string>
+    <string name="sign_up_error">Looks like User might already exist \nNote: This error might occur if you already created an account using your google or facebook account</string>
+    <string name="sign_out_error">Unable to sign out</string>
+    <string name="network_error">Please check your internet connection and try again</string>
 </resources>
